[package]
name = "lithium"
description = "Lightweight exceptions"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/iex-rs/lithium"
readme = "README.md"
keywords = ["error", "error-handling", "exception"]
categories = ["rust-patterns", "no-std"]
version = "1.0.2"
edition = "2021"
links = "rustlithium"  # Force uniqueness of crate version

[dependencies]
typeid = "1.0.2"

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
replace_with = "0.1.7"

[build-dependencies]
rustc_version = "0.4.1"

[features]
default = ["std"]
std = []
sound-under-stacked-borrows = []

[package.metadata."docs.rs"]
all-features = true

[[bench]]
name = "bench"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(nightly)", "cfg(backend, values(\"itanium\", \"seh\", \"emscripten\", \"panic\", \"unimplemented\"))"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
