[package]
name = "lithium"
description = "Lightweight exceptions"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/iex-rs/lithium"
readme = "README.md"
keywords = ["error", "error-handling", "exception"]
categories = ["rust-patterns", "no-std"]
version = "1.0.3"
edition = "2021"
links = "rustlithium"  # Force uniqueness of crate version

[dependencies]
typeid = "1.0.2"

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
replace_with = "0.1.7"

[build-dependencies]
autocfg = "1.4.0"
rustc_version = "0.4.1"

[features]
sound-under-stacked-borrows = []

[package.metadata."docs.rs"]
all-features = true

[[bench]]
name = "bench"
harness = false

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
	"cfg(abort, values(\"std\", \"core\"))",
	"cfg(backend, values(\"itanium\", \"seh\", \"emscripten\", \"panic\", \"unimplemented\"))",
	"cfg(thread_local, values(\"std\", \"attribute\", \"unimplemented\"))",
]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

# Use newer versions of emscripten and Node than cross ships by default
[workspace.metadata.cross.target.wasm32-unknown-emscripten]
image = "ghcr.io/iex-rs/wasm32-unknown-emscripten:latest"
